--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,11 +17,23 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidFunDemo"
         tools:targetApi="31">
-
+        <activity
+            android:name=".filescan.FileScanActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".webview.WebViewActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".notification.NotificationActivity"
+            android:exported="false">
+        </activity>
         <!--现在支付导入 -->
         <activity
             android:name="com.ipaynow.plugin.presenter.PayMethodActivity"
@@ -46,14 +58,12 @@
             android:name="com.alipay.sdk.app.H5PayActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
-            android:screenOrientation="behind" >
-        </activity>
+            android:screenOrientation="behind"></activity>
         <activity
             android:name="com.alipay.sdk.auth.AuthActivity"
             android:configChanges="orientation|keyboardHidden|navigation"
             android:exported="false"
-            android:screenOrientation="behind" >
-        </activity>
+            android:screenOrientation="behind"></activity>
         <!--现在支付-->
         <activity
             android:name=".ipaynowdemo.PayTestActivity"
