--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,19 +17,28 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AndroidFunDemo"
+        android:usesCleartextTraffic="true"
         tools:targetApi="31">
 
-        <!--现在支付导入 -->
+        <activity
+            android:name=".filescan.FileScanActivity"
+            android:exported="false">
+        </activity>
+        <activity
+            android:name=".notification.NotificationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".webview.WebViewActivity"
+            android:exported="false" /> <!-- 现在支付导入 -->
         <activity
             android:name="com.ipaynow.plugin.presenter.PayMethodActivity"
             android:configChanges="keyboardHidden|navigation|orientation|screenSize"
             android:exported="false"
-            android:theme="@android:style/Theme.Dialog" />
-
-        <!-- 微信插件版支付 -->
+            android:theme="@android:style/Theme.Dialog" /> <!-- 微信插件版支付 -->
         <activity
             android:name="com.ipaynow.plugin.inner_plugin.wechatpg.activity.WXPayActivity"
             android:configChanges="keyboardHidden|navigation|orientation|screenSize"
@@ -40,21 +49,7 @@
         <activity-alias
             android:name=".wxapi.WXPayEntryActivity"
             android:exported="true"
-            android:targetActivity="com.ipaynow.plugin.inner_plugin.wechatpg.activity.WXPayActivity" />
-        <!-- 支付宝支付 -->
-        <activity
-            android:name="com.alipay.sdk.app.H5PayActivity"
-            android:configChanges="orientation|keyboardHidden|navigation"
-            android:exported="false"
-            android:screenOrientation="behind" >
-        </activity>
-        <activity
-            android:name="com.alipay.sdk.auth.AuthActivity"
-            android:configChanges="orientation|keyboardHidden|navigation"
-            android:exported="false"
-            android:screenOrientation="behind" >
-        </activity>
-        <!--现在支付-->
+            android:targetActivity="com.ipaynow.plugin.inner_plugin.wechatpg.activity.WXPayActivity" /> <!-- 现在支付 -->
         <activity
             android:name=".ipaynowdemo.PayTestActivity"
             android:exported="false" />
