--- a/base/build.gradle
+++ b/base/build.gradle
@@ -33,6 +33,23 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    task makeJar(type: Copy) {
+        //删除存在的
+        delete 'build/libs/mybase.jar'
+        //设置拷贝的文件
+        from('build/intermediates/aar_main_jar/release/')
+        //打进jar包后的文件目录
+        into('build/libs/')
+        //将classes.jar放入build/libs/目录下
+        //include ,exclude参数来设置过滤
+        include('classes.jar')
+        //重命名
+        rename ('classes.jar', 'mybase.jar')
+    }
+
+    makeJar.dependsOn(build)
+
 }
 
 dependencies {
